# Adaptive-RAG-Pipeline-with-Automatic-Query-Routing

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  main.py  models.py
backend/rag/: ingestion.py  pipeline.py  retrievers.py  router.py
evaluation/: EVAL_REPORT.md  EVAL_REPORT_1.md  EVAL_REPORT_2.md  EVAL_REPORT_3.md  EVAL_REPORT_4.md  evaluator.py  report.py  testset.json  testset.py
frontend/: app.py
scripts/: ingest.py  run_eval.py  setup.py  test_api.py  test_pipeline.py  verify_ingest.py
